--- a/styles/introduction.css
+++ b/styles/introduction.css
@@ -27,6 +27,10 @@ main {
   width: 70%;
 }
 
+.image {
+  width: 250px;
+  height: auto;
+
 .understandP {
   display: flex;
   flex-direction: column;
