--- a/styles/toc.css
+++ b/styles/toc.css
@@ -25,6 +25,7 @@ header h2 {
 
 h2 {
   align-self: center;
+  margin-top: -.5%;
 }
 
 header > h1 {
@@ -49,8 +50,6 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1.5%;
-  margin-top: 5%;
   animation: fadeInAnimation ease 3.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -58,7 +57,7 @@ footer {
 
 .navBox {
   width: 80%;
-  margin: 3% 0% 3% 0%;
+  margin: 1% 0% 1% 0%;
   font-size: 18px;
   text-decoration: none;
 }
@@ -99,7 +98,7 @@ footer {
   flex-direction: row;
   justify-content:space-around;
   align-items: center;
-  margin: 20px;
+  margin: 10px;
   width: 50%;
   font-size: 14px;
 }
@@ -127,6 +126,7 @@ footer {
       opacity: 1;
   }
 }
+
 
 .contentsBox a {
   background-color: #03045E;
