--- a/styles/contract.css
+++ b/styles/contract.css
@@ -29,6 +29,7 @@ main {
 
 h2 {
   align-self: center;
+  margin-top: -.5%;
 }
 
 /* ------------------------------------------------------------------------------------------ */
@@ -94,8 +95,6 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1.5%;
-  margin-top: 5%;
   animation: fadeInAnimation ease 3.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -103,7 +102,7 @@ footer {
 
 .navBox {
   width: 80%;
-  margin: 3% 0% 3% 0%;
+  margin: 1% 0% 1% 0%;
   font-size: 18px;
   text-decoration: none;
 }
@@ -144,7 +143,7 @@ footer {
   flex-direction: row;
   justify-content:space-around;
   align-items: center;
-  margin: 20px;
+  margin: 10px;
   width: 50%;
   font-size: 14px;
 }
@@ -172,6 +171,5 @@ footer {
       opacity: 1;
   }
 }
-
 
 
