--- a/styles/brand.css
+++ b/styles/brand.css
@@ -212,6 +212,7 @@ main {
 h2 {
   align-self: center;
   font-family: 'Akatab', sans-serif;
+  margin-top: -.5%;
 }
 
 header > nav > ul > li > a {
@@ -268,8 +269,6 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1.5%;
-  margin-top: 5%;
   animation: fadeInAnimation ease 3.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
@@ -277,7 +276,7 @@ footer {
 
 .navBox {
   width: 80%;
-  margin: 3% 0% 3% 0%;
+  margin: 1% 0% 1% 0%;
   font-size: 18px;
   text-decoration: none;
 }
@@ -318,7 +317,7 @@ footer {
   flex-direction: row;
   justify-content:space-around;
   align-items: center;
-  margin: 20px;
+  margin: 10px;
   width: 50%;
   font-size: 14px;
 }
