--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,11 @@ main {
 
 h2 {
   align-self: center;
+  margin-top: -.5%;
+}
+
+header > h1 {
+  border: none;
 }
 
 header > nav > ul > li > a {
@@ -74,16 +79,15 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 1.5%;
-  margin-top: 5%;
   animation: fadeInAnimation ease 3.5s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
+  margin-top: 100px;
 }
 
 .navBox {
   width: 80%;
-  margin: 3% 0% 3% 0%;
+  margin: 1% 0% 1% 0%;
   font-size: 18px;
   text-decoration: none;
 }
@@ -124,7 +128,7 @@ footer {
   flex-direction: row;
   justify-content:space-around;
   align-items: center;
-  margin: 20px;
+  margin: 10px;
   width: 50%;
   font-size: 14px;
 }
